# coveragepy

./: igor.py  pyproject.toml
.github/workflows/: static.yml
benchmark/: benchmark.py  slowtests.py
coverage/: __init__.py  cmdline.py  config.py  control.py  data.py  debug.py  importer.py  inorout.py  instrument.py  misc.py  parser.py  plugin.py  pytracer.py  report.py  results.py  sysmon.py
doc/: cog_helpers.py  conf.py
lab/benchmark/: README.rst  benchmark.py  run.py
tests/: coveragetest.py  helpers.py  plugin1.py  plugin2.py  plugin_config.py  test_api.py  test_arcs.py  test_context.py  test_parser.py  test_plugins.py  test_process.py  test_report.py
tests/modules/: usepkgs.py
tests/modules/pkg1/: p1a.py
tests/modules/plugins/: a_plugin.py  another.py
tests/modules/process_test/: try_execfile.py
